Prevent main art from clipping
fixes #46

--- a/assets/css/_header.styl
+++ b/assets/css/_header.styl
@@ -39,6 +39,9 @@
   max-width: 414px
   width: 100%
   transform: translateX(-15.9%)
+  transition: all 300ms
+  @media (max-width: 1050px)
+    transform: translateX(0%)
 
 .cta
   text-align: right
